MAINT: clean up - dropped 3.7 & new pyproject.toml file

--- a/docs/sphinx/whatsnew/v1.5.4.rst
+++ b/docs/sphinx/whatsnew/v1.5.4.rst
@@ -7,6 +7,8 @@ v1.5.4 (???)
 Maintenance
 -----------
 * Drop Python 3.7 support (:issue:`20`)
+* Switch to pyproject.toml file (:issue:`19`)
+* Clean up (:pull:`23`)
 
 
 Contributors
