--- a/docs/sphinx/whatsnew/v1.6.1.rst
+++ b/docs/sphinx/whatsnew/v1.6.1.rst
@@ -7,6 +7,7 @@ v1.6.1 (??)
 Maintenance
 -----------
 * Drop Python 3.8 and 3.9 support (:pull:`30`, :pull:`33`)
+* Add Python 3.14 support (:pull:`35`)
 
 
 Documentation
